--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/node": "^18.6.4",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-legacy": "^2.0.0",
     "@vitejs/plugin-react": "^2.0.0",
+    "terser": "^5.14.2",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
