--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-legacy": "^2.0.0",
     "@vitejs/plugin-react": "^2.0.0",
+    "jsdom": "^20.0.0",
     "terser": "^5.14.2",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
