--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "build:lib": "tsc && vite build --config vite-lib.config.ts",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -20,6 +21,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-legacy": "^2.0.0",
     "@vitejs/plugin-react": "^2.0.0",
+    "c8": "^7.12.0",
     "happy-dom": "^6.0.4",
     "terser": "^5.14.2",
     "typescript": "^4.6.4",
