--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-legacy": "^2.0.0",
     "@vitejs/plugin-react": "^2.0.0",
+    "@vitest/ui": "^0.21.0",
     "c8": "^7.12.0",
     "happy-dom": "^6.0.4",
     "terser": "^5.14.2",
